frontend/test/should_fail/keepOneForEach_iterated_unknown_entity.grg
test t
{
	iterated it {
	---
		def var i:int;
		def var j:int;
	} \ keepOneForEach<k>Accumulate<j>By<sum>
}
